// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObservingStatTable Component Render the ObservingStatTable Component having populated props with no errors 1`] = `
<ObservingStatTable
  proposals={
    Array [
      Object {
        "allocatedTime": Object {
          "UKSC": Object {
            "p0": 0,
            "p0p1": 0,
            "p1": 0,
            "p2": 0,
            "p3": 0,
            "p4": 0,
          },
          "UW": Object {
            "p0": 0,
            "p0p1": 0,
            "p1": 0,
            "p2": 0,
            "p3": 0,
            "p4": 0,
          },
        },
        "instruments": Object {
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2018-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Clear",
      },
      Object {
        "instruments": Object {
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2017-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Thin cloud",
      },
    ]
  }
>
  <div>
    <h1>
      Observing Statistics
    </h1>
    <table
      className="table center-table"
    >
      <thead>
        <tr>
          <th>
            <h2>
              Conditions
            </h2>
          </th>
          <th>
            <h2>
              Time requested (hrs)
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
          <th>
            <h2>
              Fraction of Total Request (%)
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              Clear
            </h2>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              1
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Thin cloud
            </h2>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              1
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Thick cloud
            </h2>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Any
            </h2>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
      <thead>
        <tr>
          <th />
          <th />
          <th />
          <th />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h3>
              Max Seeing 
              <br />
               ≦ 1.0 
            </h3>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              Max Seeing 
              <br />
               ≦ 1.5
            </h3>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              Max Seeing 
              <br />
               ≦ 2.0
            </h3>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              2
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              Max Seeing 
              <br />
               ≦ 5.0
            </h3>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ObservingStatTable>
`;

exports[`ObservingStatTable Component Render the ObservingStatTable Component having unpopulated props with no errors 1`] = `
<ObservingStatTable
  proposals={Array []}
>
  <div>
    <h1>
      Observing Statistics
    </h1>
    <table
      className="table center-table"
    >
      <thead>
        <tr>
          <th>
            <h2>
              Conditions
            </h2>
          </th>
          <th>
            <h2>
              Time requested (hrs)
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
          <th>
            <h2>
              Fraction of Total Request (%)
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              Clear
            </h2>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Thin cloud
            </h2>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Thick cloud
            </h2>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Any
            </h2>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
      <thead>
        <tr>
          <th />
          <th />
          <th />
          <th />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h3>
              Max Seeing 
              <br />
               ≦ 1.0 
            </h3>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              Max Seeing 
              <br />
               ≦ 1.5
            </h3>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              Max Seeing 
              <br />
               ≦ 2.0
            </h3>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              Max Seeing 
              <br />
               ≦ 5.0
            </h3>
          </td>
          <td>
            <h2>
              0.00
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ObservingStatTable>
`;
